Дополнил объект пользователя.

--- a/generator/package.json
+++ b/generator/package.json
@@ -14,6 +14,7 @@
     "errorhandler": "*",
     "express": "*",
     "gulp": "*",
+    "htmltidy": "*",
     "method-override": "*",
     "mkdirp": "*",
     "morgan": "*",
